--- a/3.test.ipynb
+++ b/3.test.ipynb
@@ -7,31 +7,33 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import sagemaker\n",
     "from tensorflow.python.keras.preprocessing.image import load_img\n",
     "from sagemaker.predictor import json_deserializer, json_serializer\n",
     "\n",
     "\n",
-    "cat_image = load_img(\"./tmp/alf.jpg\", target_size=(128, 128))\n",
+    "cat_image = load_img(\"alf.jpg\", target_size=(128, 128))\n",
     "cat_image_array = np.array(cat_image).reshape((1, 128, 128, 3))\n",
     "\n",
-    "\n",
-    "\n",
-    "endpoint_name = 'sagemaker-tensorflow-2020-08-17-17-06-36-663'\n",
+    "endpoint = 'testendpoint'\n",
     "\n",
     "predictor = sagemaker.predictor.RealTimePredictor(\n",
-    "    endpoint=endpoint_name,\n",
+    "    endpoint=endpoint,\n",
+    "    serializer=json_serializer,\n",
+    "    deserializer=json_deserializer,\n",
     "    content_type='application/json',\n",
-    "    accept='application/json')\n",
-    "\n",
-    "\n",
-    "predictor.serializer = json_serializer\n",
-    "predictor.deserializer = json_deserializer\n",
+    "    accept='application/json',)\n",
     "\n",
     "result = predictor.predict({'inputs_input': cat_image_array})\n",
     "\n",
     "print(result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
