--- a/3.test.ipynb
+++ b/3.test.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cat:\n",
+      "{'outputs': {'dense_2': {'dtype': 'DT_FLOAT', 'floatVal': [0.0, 1.0], 'tensorShape': {'dim': [{'size': '1'}, {'size': '2'}]}}}, 'modelSpec': {'version': '1597772433', 'name': 'generic_model', 'signatureName': 'serving_default'}}\n",
+      "dog:\n",
+      "{'outputs': {'dense_2': {'dtype': 'DT_FLOAT', 'floatVal': [0.0, 1.0], 'tensorShape': {'dim': [{'size': '1'}, {'size': '2'}]}}}, 'modelSpec': {'version': '1597772433', 'name': 'generic_model', 'signatureName': 'serving_default'}}\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from tensorflow.python.keras.preprocessing.image import load_img\n",
@@ -14,7 +25,10 @@
     "cat_image = load_img(\"alf.jpg\", target_size=(128, 128))\n",
     "cat_image_array = np.array(cat_image).reshape((1, 128, 128, 3))\n",
     "\n",
-    "endpoint = 'testendpoint'\n",
+    "dog_image = load_img(\"bat.jpg\", target_size=(128, 128))\n",
+    "dog_image_array = np.array(dog_image).reshape((1, 128, 128, 3))\n",
+    "\n",
+    "endpoint = 'sagemaker-tensorflow-2020-08-18-17-34-33-772'\n",
     "\n",
     "predictor = sagemaker.predictor.RealTimePredictor(\n",
     "    endpoint=endpoint,\n",
@@ -23,9 +37,13 @@
     "    content_type='application/json',\n",
     "    accept='application/json',)\n",
     "\n",
-    "result = predictor.predict({'inputs_input': cat_image_array})\n",
+    "result_cat = predictor.predict({'inputs_input': cat_image_array})\n",
+    "print(\"cat:\")\n",
+    "print(result_cat)\n",
     "\n",
-    "print(result)"
+    "result_dog = predictor.predict({'inputs_input': dog_image_array})\n",
+    "print(\"dog:\")\n",
+    "print(result_dog)"
    ]
   },
   {
