--- a/1.train.ipynb
+++ b/1.train.ipynb
@@ -2,14 +2,176 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2.1.0 is the latest version of tensorflow that supports Python 2. Newer versions of tensorflow will only be available for Python 3.Please set the argument \"py_version='py3'\" to use the Python 3 tensorflow image.\n",
+      "'create_image_uri' will be deprecated in favor of 'ImageURIProvider' class in SageMaker Python SDK v2.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'s3_input' class will be renamed to 'TrainingInput' in SageMaker Python SDK v2.\n",
+      "'s3_input' class will be renamed to 'TrainingInput' in SageMaker Python SDK v2.\n",
+      "'create_image_uri' will be deprecated in favor of 'ImageURIProvider' class in SageMaker Python SDK v2.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2020-08-18 17:34:34 Starting - Starting the training job...\n",
+      "2020-08-18 17:34:36 Starting - Launching requested ML instances.........\n",
+      "2020-08-18 17:36:20 Starting - Preparing the instances for training.........\n",
+      "2020-08-18 17:37:46 Downloading - Downloading input data...\n",
+      "2020-08-18 17:38:32 Training - Downloading the training image...\n",
+      "2020-08-18 17:38:53 Training - Training image download completed. Training in progress.\u001b[34m2020-08-18 17:38:54,154 INFO - root - running container entrypoint\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:38:54,155 INFO - root - starting train task\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:38:54,177 INFO - container_support.training - Training starting\u001b[0m\n",
+      "\u001b[34mDownloading s3://sagemaker-us-east-1-471361871242/sagemaker-tensorflow-2020-08-18-17-34-33-772/source/sourcedir.tar.gz to /tmp/script.tar.gz\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:38:58,398 INFO - tf_container - ----------------------TF_CONFIG--------------------------\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:38:58,398 INFO - tf_container - {\"environment\": \"cloud\", \"cluster\": {\"master\": [\"algo-1:2222\"]}, \"task\": {\"index\": 0, \"type\": \"master\"}}\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:38:58,398 INFO - tf_container - ---------------------------------------------------------\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:38:58,398 INFO - tf_container - creating RunConfig:\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:38:58,398 INFO - tf_container - {'save_checkpoints_secs': 300}\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:38:58,398 INFO - tensorflow - TF_CONFIG environment variable: {u'environment': u'cloud', u'cluster': {u'master': [u'algo-1:2222']}, u'task': {u'index': 0, u'type': u'master'}}\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:38:58,399 INFO - tf_container - invoking the user-provided keras_model_fn\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:38:58,727 INFO - tensorflow - Using the Keras model provided.\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:04,469 INFO - tensorflow - Using config: {'_save_checkpoints_secs': 300, '_keep_checkpoint_max': 5, '_task_type': u'master', '_cluster_spec': <tensorflow.python.training.server_lib.ClusterSpec object at 0x7f87c48ea950>, '_keep_checkpoint_every_n_hours': 10000, '_service': None, '_num_ps_replicas': 0, '_tf_random_seed': None, '_device_fn': None, '_num_worker_replicas': 1, '_task_id': 0, '_log_step_count_steps': 100, '_evaluation_master': '', '_eval_distribute': None, '_train_distribute': None, '_session_config': device_filters: \"/job:ps\"\u001b[0m\n",
+      "\u001b[34mdevice_filters: \"/job:master\"\u001b[0m\n",
+      "\u001b[34mallow_soft_placement: true\u001b[0m\n",
+      "\u001b[34mgraph_options {\n",
+      "  rewrite_options {\n",
+      "    meta_optimizer_iterations: ONE\n",
+      "  }\u001b[0m\n",
+      "\u001b[34m}\u001b[0m\n",
+      "\u001b[34m, '_global_id_in_cluster': 0, '_is_chief': True, '_protocol': None, '_save_checkpoints_steps': None, '_experimental_distribute': None, '_save_summary_steps': 100, '_model_dir': u's3://sagemaker-us-east-1-471361871242/sagemaker-tensorflow-2020-08-18-17-34-33-772/checkpoints', '_master': ''}\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:04,496 INFO - tensorflow - Not using Distribute Coordinator.\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:04,497 INFO - tensorflow - Skip starting Tensorflow server as there is only one node in the cluster.\u001b[0m\n",
+      "\u001b[34mFound 2000 images belonging to 2 classes.\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:05,057 INFO - tensorflow - Calling model_fn.\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:05,871 INFO - tensorflow - Done calling model_fn.\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:05,872 INFO - tensorflow - Warm-starting with WarmStartSettings: WarmStartSettings(ckpt_to_initialize_from=u's3://sagemaker-us-east-1-471361871242/sagemaker-tensorflow-2020-08-18-17-34-33-772/checkpoints/keras/keras_model.ckpt', vars_to_warm_start='.*', var_name_to_vocab_info={}, var_name_to_prev_var_name={})\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:05,872 INFO - tensorflow - Warm-starting from: (u's3://sagemaker-us-east-1-471361871242/sagemaker-tensorflow-2020-08-18-17-34-33-772/checkpoints/keras/keras_model.ckpt',)\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:05,872 INFO - tensorflow - Warm-starting variable: conv2d_2/kernel; prev_var_name: Unchanged\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:06,087 INFO - tensorflow - Warm-starting variable: dense_1/bias; prev_var_name: Unchanged\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:06,305 INFO - tensorflow - Warm-starting variable: dense_2/kernel; prev_var_name: Unchanged\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:06,492 INFO - tensorflow - Warm-starting variable: conv2d_1/bias; prev_var_name: Unchanged\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:06,701 INFO - tensorflow - Warm-starting variable: dense/kernel; prev_var_name: Unchanged\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:06,957 INFO - tensorflow - Warm-starting variable: conv2d_3/bias; prev_var_name: Unchanged\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:07,154 INFO - tensorflow - Warm-starting variable: dense/bias; prev_var_name: Unchanged\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:07,349 INFO - tensorflow - Warm-starting variable: inputs/bias; prev_var_name: Unchanged\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:07,548 INFO - tensorflow - Warm-starting variable: inputs/kernel; prev_var_name: Unchanged\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:07,773 INFO - tensorflow - Warm-starting variable: dense_1/kernel; prev_var_name: Unchanged\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:07,971 INFO - tensorflow - Warm-starting variable: conv2d_3/kernel; prev_var_name: Unchanged\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:08,217 INFO - tensorflow - Warm-starting variable: dense_2/bias; prev_var_name: Unchanged\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:08,552 INFO - tensorflow - Warm-starting variable: conv2d/bias; prev_var_name: Unchanged\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:08,767 INFO - tensorflow - Warm-starting variable: conv2d_1/kernel; prev_var_name: Unchanged\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:08,974 INFO - tensorflow - Warm-starting variable: conv2d_2/bias; prev_var_name: Unchanged\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:09,199 INFO - tensorflow - Warm-starting variable: conv2d/kernel; prev_var_name: Unchanged\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:09,413 INFO - tensorflow - Create CheckpointSaverHook.\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:11,301 INFO - tensorflow - Graph was finalized.\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:12,184 INFO - tensorflow - Running local_init_op.\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:12,195 INFO - tensorflow - Done running local_init_op.\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:14,626 INFO - tensorflow - Saving checkpoints for 0 into s3://sagemaker-us-east-1-471361871242/sagemaker-tensorflow-2020-08-18-17-34-33-772/checkpoints/model.ckpt.\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:19,573 INFO - tensorflow - loss = 0.69602686, step = 0\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:24,977 INFO - tensorflow - global_step/sec: 18.502\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:24,978 INFO - tensorflow - loss = 0.64898574, step = 100 (5.405 sec)\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:29,812 INFO - tensorflow - global_step/sec: 20.6809\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:29,814 INFO - tensorflow - loss = 0.57667667, step = 200 (4.836 sec)\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:34,571 INFO - tensorflow - global_step/sec: 21.0169\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:34,572 INFO - tensorflow - loss = 0.5116442, step = 300 (4.758 sec)\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:39,394 INFO - tensorflow - global_step/sec: 20.7305\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:39,395 INFO - tensorflow - loss = 0.47789854, step = 400 (4.824 sec)\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:44,155 INFO - tensorflow - global_step/sec: 21.0037\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:44,156 INFO - tensorflow - loss = 0.4613367, step = 500 (4.761 sec)\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:49,002 INFO - tensorflow - global_step/sec: 20.6315\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:49,003 INFO - tensorflow - loss = 0.44941646, step = 600 (4.847 sec)\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:53,769 INFO - tensorflow - global_step/sec: 20.9781\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:53,770 INFO - tensorflow - loss = 0.41099593, step = 700 (4.767 sec)\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:58,607 INFO - tensorflow - global_step/sec: 20.6726\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:39:58,607 INFO - tensorflow - loss = 0.39540896, step = 800 (4.837 sec)\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:40:03,387 INFO - tensorflow - global_step/sec: 20.9166\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:40:03,388 INFO - tensorflow - loss = 0.40138265, step = 900 (4.781 sec)\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:40:08,192 INFO - tensorflow - Saving checkpoints for 1000 into s3://sagemaker-us-east-1-471361871242/sagemaker-tensorflow-2020-08-18-17-34-33-772/checkpoints/model.ckpt.\u001b[0m\n",
+      "\u001b[34mFound 2000 images belonging to 2 classes.\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:40:28,341 INFO - tensorflow - Calling model_fn.\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:40:28,553 INFO - tensorflow - Done calling model_fn.\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:40:28,575 INFO - tensorflow - Starting evaluation at 2020-08-18-17:40:28\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:40:28,682 INFO - tensorflow - Graph was finalized.\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:40:28,765 INFO - tensorflow - Restoring parameters from s3://sagemaker-us-east-1-471361871242/sagemaker-tensorflow-2020-08-18-17-34-33-772/checkpoints/model.ckpt-1000\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:40:29,025 INFO - tensorflow - Running local_init_op.\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:40:29,033 INFO - tensorflow - Done running local_init_op.\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:40:29,439 INFO - tensorflow - Evaluation [10/100]\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:40:29,614 INFO - tensorflow - Evaluation [20/100]\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:40:29,791 INFO - tensorflow - Evaluation [30/100]\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:40:29,972 INFO - tensorflow - Evaluation [40/100]\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:40:30,154 INFO - tensorflow - Evaluation [50/100]\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:40:30,332 INFO - tensorflow - Evaluation [60/100]\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:40:30,510 INFO - tensorflow - Evaluation [70/100]\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:40:30,688 INFO - tensorflow - Evaluation [80/100]\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:40:30,865 INFO - tensorflow - Evaluation [90/100]\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:40:31,043 INFO - tensorflow - Evaluation [100/100]\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:40:31,059 INFO - tensorflow - Finished evaluation at 2020-08-18-17:40:31\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:40:31,059 INFO - tensorflow - Saving dict for global step 1000: accuracy = 0.59375, global_step = 1000, loss = 0.7518126\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:40:32,677 INFO - tensorflow - Saving 'checkpoint_path' summary for global step 1000: s3://sagemaker-us-east-1-471361871242/sagemaker-tensorflow-2020-08-18-17-34-33-772/checkpoints/model.ckpt-1000\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:40:33,420 INFO - tensorflow - Calling model_fn.\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:40:33,573 INFO - tensorflow - Done calling model_fn.\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:40:33,573 INFO - tensorflow - Signatures INCLUDED in export for Eval: None\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:40:33,573 INFO - tensorflow - Signatures INCLUDED in export for Classify: None\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:40:33,573 INFO - tensorflow - Signatures INCLUDED in export for Regress: None\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:40:33,573 INFO - tensorflow - Signatures INCLUDED in export for Predict: ['serving_default']\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:40:33,573 INFO - tensorflow - Signatures INCLUDED in export for Train: None\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:40:33,700 INFO - tensorflow - Restoring parameters from s3://sagemaker-us-east-1-471361871242/sagemaker-tensorflow-2020-08-18-17-34-33-772/checkpoints/model.ckpt-1000\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:40:34,056 WARNING - tensorflow - From /usr/local/lib/python2.7/dist-packages/tensorflow/python/estimator/estimator.py:1046: calling add_meta_graph_and_variables (from tensorflow.python.saved_model.builder_impl) with legacy_init_op is deprecated and will be removed in a future version.\u001b[0m\n",
+      "\u001b[34mInstructions for updating:\u001b[0m\n",
+      "\u001b[34mPass your op to the equivalent parameter main_op instead.\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:40:34,056 INFO - tensorflow - Assets added to graph.\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:40:34,056 INFO - tensorflow - No assets to write.\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:40:35,425 INFO - tensorflow - SavedModel written to: s3://sagemaker-us-east-1-471361871242/sagemaker-tensorflow-2020-08-18-17-34-33-772/checkpoints/export/Servo/1597772433/saved_model.pb\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:40:36,072 INFO - tensorflow - Loss for final step: 0.3692239.\u001b[0m\n",
+      "\u001b[34m2020-08-18 17:40:36,303 INFO - tf_container - Downloaded saved model at /opt/ml/model/export/Servo/1597772433\u001b[0m\n",
+      "\n",
+      "2020-08-18 17:40:47 Uploading - Uploading generated training model\n",
+      "2020-08-18 17:40:47 Completed - Training job completed\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Parameter image will be renamed to image_uri in SageMaker Python SDK v2.\n",
+      "2.1.0 is the latest version of tensorflow that supports Python 2. Newer versions of tensorflow will only be available for Python 3.Please set the argument \"py_version='py3'\" to use the Python 3 tensorflow image.\n",
+      "'create_image_uri' will be deprecated in favor of 'ImageURIProvider' class in SageMaker Python SDK v2.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training seconds: 181\n",
+      "Billable seconds: 181\n",
+      "Deploying ...\n",
+      "---------------!"
+     ]
+    }
+   ],
    "source": [
     "import sagemaker\n",
     "from sagemaker.tensorflow import TensorFlow\n",
-    "\n",
-    "train_instance_type=      # The type of EC2 instance which will be used for training\n",
     "\n",
     "hyperparameters={\n",
     "    \"learning_rate\": 1e-4,\n",
@@ -30,8 +192,21 @@
     "  train_instance_type='ml.p2.xlarge',\n",
     ")\n",
     "\n",
-    "estimator.fit({'training': train_input_path, 'eval': validation_input_path})"
+    "print(\"Training ...\")\n",
+    "estimator.fit({'training': train_input_path, 'eval': validation_input_path})\n",
+    "\n",
+    "print(\"Deploying ...\")\n",
+    "predictor = estimator.deploy(initial_instance_count=1, instance_type=deploy_instance_type)\n",
+    "print(predictor.endpoint)\n",
+    "print(\"FIN\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
