--- a/1.train.ipynb
+++ b/1.train.ipynb
@@ -33,7 +33,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-08-20 19:18:54 Starting - Starting the training job.."
+      "2020-08-20 21:12:29 Starting - Starting the training job...\n",
+      "2020-08-20 21:12:33 Starting - Launching requested ML instances......\n",
+      "2020-08-20 21:13:49 Starting - Preparing the instances for training.........\n",
+      "2020-08-20 21:15:28 Downloading - Downloading input data...."
      ]
     }
    ],
@@ -54,8 +57,8 @@
     "  role=sagemaker.get_execution_role(),\n",
     "  framework_version=\"1.12.0\",               # TensorFlow's version\n",
     "  hyperparameters=hyperparameters,\n",
-    "  training_steps=1000,\n",
-    "  evaluation_steps=100,\n",
+    "  training_steps=10000,\n",
+    "  evaluation_steps=1000,\n",
     "  train_instance_count=1,                   # \"The number of GPUs instances to use\"\n",
     "  train_instance_type='ml.p2.xlarge',\n",
     ")\n",
@@ -64,7 +67,7 @@
     "estimator.fit({'training': train_input_path, 'eval': validation_input_path})\n",
     "\n",
     "print(\"Deploying ...\")\n",
-    "predictor = estimator.deploy(initial_instance_count=1, instance_type=deploy_instance_type)\n",
+    "predictor = estimator.deploy(initial_instance_count=1, instance_type='ml.p2.xlarge')\n",
     "print(predictor.endpoint)\n",
     "print(\"done!\")\n"
    ]
