--- a/0.demo.ipynb
+++ b/0.demo.ipynb
@@ -24,13 +24,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To get started using Matplotlib in a Python program, either include the symbols from the `pylab` module (the easy way):"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -44,8 +37,7 @@
    },
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
-    "from pylab import *\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np"
    ]
   },
@@ -77,15 +69,13 @@
    },
    "outputs": [],
    "source": [
+    "\n",
+    "x = np.linspace(0,10,100)\n",
+    "\n",
     "fig = plt.figure()\n",
     "\n",
-    "axes = fig.add_axes([0.1, 0.1, 1, 1]) # left, bottom, width, height (range 0 to 1)\n",
-    "\n",
-    "axes.plot(x, y, 'r')\n",
-    "\n",
-    "axes.set_xlabel('x')\n",
-    "axes.set_ylabel('y')\n",
-    "axes.set_title('el titulo de la grafica');"
+    "plt.plot(x, np.sin(x),'-')\n",
+    "plt.plot(x, np.cos(x),'--')"
    ]
   },
   {
@@ -111,6 +101,8 @@
    "source": [
     "fig = plt.figure()\n",
     "\n",
+    "y = np.linspace(0,10,100)\n",
+    "\n",
     "axes1 = fig.add_axes([0.1, 0.1, 0.8, 0.8]) # main axes\n",
     "axes2 = fig.add_axes([0.2, 0.5, 0.4, 0.3]) # inset axes\n",
     "\n",
@@ -130,9 +122,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_pytorch_p36",
+   "display_name": "conda_python3",
    "language": "python",
-   "name": "conda_pytorch_p36"
+   "name": "conda_python3"
   },
   "language_info": {
    "codemirror_mode": {
