--- a/2.test_model.ipynb
+++ b/2.test_model.ipynb
@@ -39,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "endpoint = 'sagemaker-tensorflow-2020-08-26-01-04-33-292'"
+    "endpoint = 'sagemaker-xxxx-ingrese-su-endpoint-aqui'"
    ]
   },
   {
@@ -72,8 +72,12 @@
     "        image_resized = Image.fromarray(image_array[0])\n",
     "        display(image_resized)\n",
     "        result = predictor.predict({'inputs_input': image_array})\n",
-    "        print(result)\n",
-    "\n"
+    "        pdog=int(result['outputs']['dense_2']['floatVal'][1])\n",
+    "        pcat=int(result['outputs']['dense_2']['floatVal'][0])\n",
+    "        if(pdog>pcat): \n",
+    "            print('dog!!')\n",
+    "        else:\n",
+    "            print('cat!!')"
    ]
   }
  ],
